k8s/istio.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: api-connector-gateway
  namespace: service
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: api-connector
  namespace: service
spec:
  hosts:
    - "*"
  gateways:
    - api-connector-gateway
  http:
    - match:
        - uri:
            prefix: /api-connector
      rewrite:
        uri: /
      route:
        - destination:
            host: api-connector.service.svc.cluster.local
            port:
              number: 8081
